# fastapi-crud-api

./: .gitignore  README.md  e2e-crud-api.spec.ts  pyproject.toml  railway.toml  requirements.txt
app/: database.py  main.py  models.py  schemas.py
app/routers/: health.py  items.py
tests/: conftest.py  test_items.py
